Appointement history mapping
